<resources>

    //Dilan
    <string name="app_name">Travelly</string>
    <string name="title_home">Explore</string>
    <string name="title_dashboard">Favourites</string>
    <string name="title_notifications">Profile</string>
    <string name="imageView2" translatable="false">Stays</string>
    <string name="bt1" translatable="false">Stays</string>
    <string name="sr" translatable="false">Search</string>
    <string name="bt2" translatable="false">Adventures</string>
    <string name="bt3" translatable="false">Restaurants</string>
    <string name="txt11" translatable="false">Places to stay around SriLanka</string>
    <string name="txt1" translatable="false">Hikkaduwa Beach Hotel LKR 9200.00/night</string>
    <string name="switch1" translatable="false">Save</string>
    <string name="pp" translatable="false">Ella Jungle ResortLKR 9200.00/night</string>
    <string name="uu" translatable="false">Explore New Adventures</string>
    <string name="txt" translatable="false">Explore more places to stay</string>
    <string name="tx7" translatable="false">Ella Hill hotel LKR 8500.00/night </string>
    <string name="button" translatable="false">save</string>
    <string name="tx11" translatable="false">Cabana hotel LKR 9800.00/night </string>
    <string name="button2" translatable="false">save</string>
    <string name="dd" translatable="false">Nilaveli Beach hotel LKR 7200.00/night </string>
    <string name="button3" translatable="false">save</string>
    <string name="textView7" translatable="false">Ella jungle hotel LKR 9700.00/night </string>
    <string name="button4" translatable="false">UPDATE</string>
    <string name="txt111" translatable="false">More Restaurants to Explore</string>
    <string name="txt2" translatable="false">UgaBay , Eastern province of SriLanka</string>
    <string name="tct3" translatable="false">Arcadia cafe and restaurant</string>
    <string name="bt11" translatable="false">save</string>
    <string name="bt33" translatable="false">save</string>
    <string name="txt4" translatable="false">Ella hill restaurant</string>
    <string name="bt5" translatable="false">save</string>
    <string name="txt9" translatable="false">Senani Restaurant</string>
    <string name="bt6" translatable="false">save</string>
    <string name="add" translatable="false">Submit</string>
    <string name="loc" translatable="false">Location</string>
    <string name="loca" translatable="false"></string>
    <string name="show" translatable="false"> Go to Admin Pannel</string>
    <string name="opo1" translatable="false">Description of Adventure Place</string>
    <string name="pol" translatable="false"></string>
    <string name="update" translatable="false">Update</string>
    <string name="update1" translatable="false">Update</string>
    <string name="contact_form">Contact Us</string>
    <string name="contact_form_name">Your Name</string>
    <string name="contact_form_email">Your Email</string>
    <string name="contact_form_subject">Subject</string>
    <string name="contact_form_message">Message</string>
    <string name="contact_form_button">Send Message</string>
    <string name="contact_form_post_message">Please wait! We\'re sending your message to the support department...</string>
    <string name="contact_posted">Your message has been successfully delivered.</string>
    <string name="ImageNameDetails"></string>
    <string name="edittext"></string>
    <string name="button_choose_image"> Choose Image</string>
    <string name="text_view_show_uploads"> Show Uploads</string>
    <string name="button_upload"> Upload</string>


    //Varniah

    <string name="yy" translatable="false">
        <br>Reviews\n</br>
        <br>Reviewed July 3, 2019\n</br>
        <br>Good food.can improve ambiance\n</br>
        <br>Oh the food was amazing..Cuttlefish though they can improve..rest of the dishes were fairly priced and really good.Place is quite dull though they can work on improving the ambiance\n\n</br>
    </string>
    <string name="but" translatable="false">save</string>
    <string name="butt2" translatable="false">Add Review</string>
    <string name="bbb" translatable="false">submit</string>
    <string name="btn" translatable="false">Remove</string>
    <string name="txt44" translatable="false">
        <br>Arugam Bay\n\n</br>
        <br>Arugam Bay is a great surfing destination on the East Coast of Sri Lanka, 320 kilometers east from Colombo.\n\n</br>
        <br>Province: Eastern Province\n</br>
    </string>
    <string name="op" translatable="false">Edit</string>
    <string name="lll" translatable="false">Delete</string>
    <string name="txt888" translatable="false">The location is lovely, three minute tuk tuk ride to the center so outside the buzz, so calm and quiet, but close to good restaurants and cafes! The view from our room was unbeatable!</string>
    <string name="pll" translatable="false">Explore the Adventures in Srilanka</string>
    <string name="kkk" translatable="false">Hanthena, south-west of the city of Kandy</string>
    <string name="bn" translatable="false">save</string>
    <string name="bn2" translatable="false">save</string>
    <string name="oooo" translatable="false">Arugambay, Eastern province of Srilanka</string>
    <string name="bn3" translatable="false">save</string>
    <string name="txt444" translatable="false">World End, Central province</string>
    <string name="txt6" translatable="false">Sigiriya, Central province  </string>
    <string name="bn4" translatable="false">save</string>
    <string name="gg">Collect places to stay and thing to do by tapping the star icon.</string>
    <string name="hhh" translatable="false">Favourites</string>
    <string name="title_activity_sdf">sdf</string>
    <string name="fed1" translatable="false">Send Feedback</string>
    <string name="img_view4" translatable="false"></string>
    <string name="name_view4" translatable="false"></string>
    <string name="des_view4" translatable="false"></string>
    <string name="url_view4" translatable="false"></string>
    <string name="button401" translatable="false">Update</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="msg" translatable="false">How are we doing? </string>
    <string name="about">We are always working to improve the  TRAVELLY experiance,so we\'d love to hear what\'s working and how we can do better.</string>
    <string name="next1">What would you like to do?</string>
    <string name="r1">Request</string>
    <string name="r2">Report</string>
    <string name="r3">Review</string>


    //damitha
    <string name="add_restaurant_head">ADD RESTAURANT</string>
    <string name="add_restaurant_pick_place_on_map">Pick the place on MAP</string>
    <string name="add_stays_head">ADD STAYS</string>
    <string name="add_stays_add_images">Add Images</string>
    <string name="add_stays_pick_place_on_map">Pick the place on MAP</string>
    <string name="admin_dashboard_head">ADMIN DASHBOARD</string>
    <string name="admin_dashboard_add_to_explorer">Add to Explorer </string>
    <string name="admin_dashboard_view_feedback">View Feedback</string>
    <string name="admin_dashboard_user_management">User Management</string>
    <string name="user_management_head">User Management</string>
    <string name="user_management_name_column">Name</string>
    <string name="user_management_email_column">Email</string>
    <string name="add_adventure_head">ADD ADVENTURE </string>
    <string name="add_adventure_add_images">Add Images</string>
    <string name="add_adventure_pick_place_on_map">Pick the place on MAP</string>
    <string name="explore_panel_head">ADMIN PANEL</string>
    <string name="explore_panel_add_stays">Add Stays</string>
    <string name="explore_panel_add_adventure">Add Adventure</string>
    <string name="explore_panel_add_restaurant">Add Restaurant</string>
    <string name="feedback_head">FEEDBACKS</string>
    <string name="feedback_name_column">Name</string>
    <string name="feedback_report_column">Feedback or Report</string>
    <string name="advantureName">Name</string>
    <string name="Discription">Discription</string>
    <string name="editName">enter Name</string>
    <string name="edit">Name</string>


    //Cletwin
    <string name="already_registered">Already Registered?</string>
    <string name="by_clicking_submit_you_agree_our_terms_and_conditions">by clicking submit you agree our Terms and Conditions</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="already">Continue with Existing Account</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="title_activity_daw">DawActivity</string>
    <string name="phone">Phone</string>

    <string name="admin_stays_head">Stays</string>
    <string name="admin_stays_add_stay">Add Stays</string>
    <string name="admin_stays_manage_stays">Manage Stays</string>
    <string name="add_stays_btn">Choose Image</string>
    <string name="add_stays_btn_done">Add Stay</string>
    <string name="add_stays_btn_map">Pick a Place</string>
    <string name="stays_image_name">Name</string>
    <string name="stays_show_all">Show All Stays</string>

    <string name="stay_name">Enter Name of the Stay</string>
    <string name="stay_description_price">Enter Description and Price</string>
    <string name="stay_location">Add a Location Url</string>
    <string name="stay_choose_image">Choose Image</string>
    <string name="stay_show_all">All Stays</string>
    <string name="stay_add_stay">Add Stay</string>
    <string name="stay_show_stays">Show Stays</string>
    <string name="update_choose_image">Choose Image</string>
    <string name="update_update">Update</string>
    <string name="stay_name_place">Name and Place of  the Stay</string>
    <string name="image_saty_name">Name</string>
    <string name="search_hint">Search here for Stays</string>
    <string name="forgot_password_recover">Forgot Password? Recover</string>
    <string name="register">Register</string>
    <string name="i_m_a_admin">I\'m a Admin</string>
    <string name="welcome_to_travelly">Welcome to Travelly</string>
    <string name="login_here">Login Here</string>
    <string name="join_here">Join Here</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="i_m_a_user">I\'m a User</string>
    <string name="adventures">Adventures</string>
    <string name="stays">Stays</string>
    <string name="restarurants">Restarurants</string>

</resources>
