<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/gradient"
    android:padding="30dp"
    tools:context=".LoginActivity"
    >


    <ImageView
        android:layout_width="320dp"
        android:layout_height="180dp"
        android:layout_gravity="center"
        android:layout_marginTop="0dp"
        android:src="@drawable/user"

        />
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"

        >

        <EditText
            android:id="@+id/edtemail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="text"
            android:textSize="20sp"
            tools:ignore="TextFields" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        app:passwordToggleEnabled="true"

        >

        <EditText
            android:id="@+id/edtpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textSize="20sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_rounded"
        android:text="@string/login"
        android:textColor="#ffffff"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/recoverPassTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:textAlignment="center"
        android:text="@string/forgot_password_recover" />

    <TextView
        android:id="@+id/registerpath"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30sp"
        android:textSize="18sp"
        android:textAlignment="center"
        android:text="@string/don_t_have_an_account" />

    <Button
        android:id="@+id/register_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_rounded"
        android:text="@string/register"
        android:textColor="#ffffff"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/admin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:textSize="18sp"
        android:textColor="@color/colorPrimaryDark"
        android:textAlignment="center"
        android:text="@string/i_m_a_admin" />

</LinearLayout>