<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="780dp"
    android:background="@drawable/gradient"
    android:padding="30dp"
    tools:context=".MainActivity"
    >


    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:text="@string/welcome_to_travelly"
        android:textColor="#8BBD43"
        android:textColorHighlight="#C4584141"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="325dp"
        android:layout_marginTop="-20dp"
        android:padding="0dp"
        android:src="@drawable/logo" />

    <TextView
        android:id="@+id/loginpath"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="14sp"
        android:text="@string/already" />




    <Button
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_rounded"
        android:text="@string/login_here"
        android:textColor="#ffffff"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/registerpath"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:textAlignment="center"
        android:textSize="14sp"
        android:text="@string/don_t_have_an_account" />

    <Button
        android:id="@+id/register_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textAlignment="center"
        android:background="@drawable/button_rounded"
        android:text="@string/join_here"
        android:textColor="#ffffff"
        android:textSize="22sp" />


</LinearLayout>