<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgraound"
    tools:context=".Stays_admin">


    <Button
        android:id="@+id/button_choose_image"
        android:layout_width="130dp"
        android:layout_height="45dp"

        android:background="@drawable/button_rounded"

        android:text="@string/stay_choose_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.928"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.127" />

    <EditText
        android:id="@+id/edit_text_file_name"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="20dp"

        android:hint="@string/stay_name_place"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_view"
        app:layout_constraintVertical_bias="0.054" />

    <EditText
        android:id="@+id/edit_text_file_name3"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="20dp"

        android:layout_marginTop="28dp"
        android:hint="@string/stay_description_price"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_file_name"
        app:layout_constraintVertical_bias="0.106" />

    <EditText

        android:id="@+id/edit_text_file_name4"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="20dp"

        android:hint="@string/stay_location"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_file_name3"
        app:layout_constraintVertical_bias="0.171" />

    <ImageView
        android:id="@+id/image_view"
        android:layout_width="220dp"
        android:layout_height="220dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_choose_image"
        app:layout_constraintHorizontal_bias="0.295"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.029"
        app:srcCompat="@android:drawable/ic_menu_gallery" />

    <ProgressBar
        android:id="@+id/progress_bar"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_file_name4"
        app:layout_constraintVertical_bias="0.146" />

    <Button
        android:id="@+id/button_upload"
        android:layout_width="130dp"
        android:layout_height="45dp"

        android:layout_marginStart="248dp"
        android:layout_marginLeft="248dp"
        android:background="@drawable/button_rounded"
        android:text="@string/stay_add_stay"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progress_bar" />

    <TextView
        android:id="@+id/text_view_show_uploads"
        android:layout_width="130dp"
        android:layout_height="45dp"

        android:layout_marginEnd="56dp"
        android:layout_marginRight="56dp"
        android:background="@drawable/button_rounded"
        android:gravity="center"
        android:text="@string/stay_show_stays"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_upload"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progress_bar" />


</androidx.constraintlayout.widget.ConstraintLayout>